img link replaced

--- a/Welcome.html
+++ b/Welcome.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1 class="block-effect" style="--td: 1.2s">
-            <img src="" width="20%">
+            <img src="images/logo.png" width="20%">
             <div class="block-reveal" style="--bc: #3dcbff; --d: .1s">풋그리나에 오신 것을</div>
             <div class="block-reveal" style="--bc: #7c009b; --d: .5s">환영합니다! <i class="fa-regular fa-futbol"></i></div>
             <div class="fade-in">아래 안내 사항을 끝까지 읽어주세요</div>
