--- a/Welcome.html
+++ b/Welcome.html
@@ -33,6 +33,7 @@
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
+                <i class="fas fa-unlock unlocked"></i>
             </div>
             <div class="block" id="block3">
                 <div class="content">
@@ -43,6 +44,7 @@
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
+                <i class="fas fa-unlock unlocked"></i>
             </div>
             <div class="block">
                 <div class="content">
