js-숫자입력까지

--- a/Welcome.html
+++ b/Welcome.html
@@ -19,7 +19,7 @@
         <div class="view">
             <div class="block" id="block1">
                 <div class="content">
-                    <h4>정보 확인</h4>
+                    <h3>정보 확인</h3>
                     <p>소모임 가입 정보와 일치하는지 확인하기 위해 이름과 성별을 입력 후 확인 버튼을 눌러주세요.</p>
                     <div class="block-in">
                         <form name="user-data" method="POST" data-netlify="true">
@@ -41,29 +41,41 @@
                     </div>
                     <label style="display: none;">
                         <input type="checkbox" id="check1" />
-                        I agree to see the next block
                     </label>
                 </div>
             </div>
             
             <div class="block" id="block2">        
                 <div class="content">
-                    <p>Content of Block 2</p>
-                    <label>
-                        <input type="checkbox" id="check2" />
-                        I agree to see the next block
-                    </label>
+                    <h3>운동 요일 및 경기 참여</h3>
+                    <ul style="padding-left: 20px;">
+                        <li>풋살 경기(정기모임)는 매주 월, 목요일 20~22시, 일요일 10~12시에 진행됩니다.</li>
+                        <li>경기 참여는 소모임 앱을 통해 <b>선착순</b>으로 이루어집니다.</li>
+                        <li>만석일 경우 <b>경기 이틀 전부터</b> 대기자 명단 요청을 해주시면 게시글을 작성해 드리겠습니다. 대기자 명단에 댓글을 등록하시면 취소 인원 발생 시 순서대로 입장 가능합니다.</li>
+                    </ul>
+                    <div>
+                        <input type="text" id="inputNumber1" placeholder="숫자 입력" />
+                        <button type="button" id="submitNumber1">확인</button>
+                    </div>
                 </div>
                 <i class="fas fa-lock locked"></i>
                 <i class="fas fa-unlock unlocked"></i>
             </div>
+            
 
             <div class="block" id="block3">
                 <div class="content">
-                    <p>Content of Block 3</p>
+                    <h3>준비물 및 경기 당일 안내</h3>
+                    <ul style="padding-left: 20px;">
+                        <li>풋살화, 음료, 팀조끼는 <b>개별 지참</b>해 주시기 바랍니다. 조끼 색상은 형광노란색 혹은 형광분홍색 가능합니다.</li>
+                        <li><b>경기 시작 10분 전까지</b> 구장에 모여주시기 바랍니다. 준비 운동과 팀 나누기에 시간이 소요되므로, 10분 전까지 참여하지 않으시면 지각으로 간주됩니다.</li>
+                        <li></li>
+                    </ul>
                     <label>
-                        <input type="checkbox" id="check3" />
-                        I agree to see the next block
+                        <div class="button-container">
+                            <input type="text" id="inputNumber" placeholder="숫자 입력" />
+                            <button id="submitNumber">제출</button>
+                        </div>
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
@@ -74,8 +86,10 @@
                 <div class="content">
                     <p>Content of Block 4</p>
                     <label>
-                        <input type="checkbox" id="check4" />
-                        I agree to see the next block
+                        <div class="button-container">
+                            <input type="checkbox" id="check4" />
+                        위 내용을 확인했습니다.
+                        </div>
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
@@ -87,7 +101,7 @@
                     <p>Content of Block 5</p>
                     <label>
                         <input type="checkbox" id="check5" />
-                        I agree to see the next block
+                        위 내용을 확인했습니다.
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
@@ -99,7 +113,7 @@
                     <p>Content of Block 6</p>
                     <label>
                         <input type="checkbox" id="check6" />
-                        I agree to see the next block
+                        위 내용을 확인했습니다.
                     </label>
                 </div>
                 <i class="fas fa-lock locked"></i>
