html-숫자 추가 중

--- a/Welcome.html
+++ b/Welcome.html
@@ -53,9 +53,11 @@
                         <li>경기 참여는 소모임 앱을 통해 <b>선착순</b>으로 이루어집니다.</li>
                         <li>만석일 경우 <b>경기 이틀 전부터</b> 대기자 명단 요청을 해주시면 게시글을 작성해 드리겠습니다. 대기자 명단에 댓글을 등록하시면 취소 인원 발생 시 순서대로 입장 가능합니다.</li>
                     </ul>
-                    <div>
-                        <input type="text" id="inputNumber1" placeholder="숫자 입력" />
-                        <button type="button" id="submitNumber1">확인</button>
+                    <div class="block-in">
+                        <b>대기 명단 요청은</b>
+                        <input type="text" placeholder="숫자 입력" />
+                        <b>일 전부터 가능하다.</b>
+                        <button type="button" class="button-container">확인</button>
                     </div>
                 </div>
                 <i class="fas fa-lock locked"></i>
@@ -73,8 +75,9 @@
                     </ul>
                     <label>
                         <div class="button-container">
-                            <input type="text" id="inputNumber" placeholder="숫자 입력" />
-                            <button id="submitNumber">제출</button>
+                            <input type="text" id="inputNumber2" placeholder="숫자 입력" />
+                            <button type="button" id="submitNumber2">확인</button>
+
                         </div>
                     </label>
                 </div>
