--- a/Welcome.html
+++ b/Welcome.html
@@ -36,13 +36,10 @@
                                     </label>
                                 </p>
                                 <p class="button-container">
-                                    <button type="submit" class="btn">확인</button>
+                                    <button type="submit" class="btn" id="submit-button-1">확인</button>
                                 </p>
                             </form>
                         </div>
-                        <label style="display: none;">
-                            <input type="checkbox" id="check1" />
-                        </label>
                     </div>
                 </div>
             </div>
@@ -187,7 +184,7 @@
                                     <input type="text" name="kakaoId" id="kakaoId" required />
                                 </label>
                                 <p class="button-container">
-                                    <button type="submit" class="btn" id="submit-button">확인</button>
+                                    <button type="submit" class="btn" id="submit-button-2">확인</button>
                                 </p>
                             </div>
                         </div>
