--- a/Welcome.html
+++ b/Welcome.html
@@ -198,6 +198,6 @@
             </div>
 
         </div>
-        <script src="scrpit.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
