--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <label>
                         <div class="block-in-container">
                             <div class="block-in">
-                                <input type="checkbox"" />
+                                <input type="checkbox" />
                                 위 내용을 확인했습니다.
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                             <img src="images/field.jpg" class="img-field">
                             <div class="block-in-container">
                                 <div class="block-in">
-                                    <input type="checkbox"" />
+                                    <input type="checkbox" />
                                     위 내용을 확인했습니다.
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                     <label>
                         <div class="block-in-container">
                             <div class="block-in">
-                                <input type="checkbox"" />
+                                <input type="checkbox" />
                                 위 내용을 확인했습니다.
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                         <div class="button-container">
                             <div class="block-in-container">
                                 <div class="block-in">
-                                    <input type="checkbox"" />
+                                    <input type="checkbox" />
                                     위 내용을 확인했습니다.
                                 </div>
                             </div>
