local test finished

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <div class="block-in">
                             <p>
                                 대기 명단 요청은
-                                <input type="text" class="numbox" placeholder="?" />
+                                <input type="text" class="numbox" id="num-input" placeholder="?" />
                                 일 전부터 가능하다.
                             </p>
                             <div class="link-click">숫자를 입력해주세요.</div>
                             <p class="button-container">
-                                <button type="button" class="btn">확인</button>
+                                <button type="button" class="btn" id="num-button">확인</button>
                             </p>
                         </div>
                     </div>
