--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="block-in-container">
                             <div class="block-in">
                                 <label for="kakaoId">kakao ID: 
-                                    <input type="text" name="kakaoId" id="kakaoId" required />
+                                    <input type="text" name="kakaoId" required />
                                 </label>
                                 <p class="button-container">
                                     <button type="button" class="btn" id="submit-button-2">확인</button>
