link target 속성 수정

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     <h3>소통 및 문의</h3>
                     <div class="block-in-container">
                         <div class="block-in">
-                            <a href="https://open.kakao.com/o/g1sCUT8d" target="_blank">공지방</a>
-                            <a href="https://open.kakao.com/o/gomQsvje" target="_blank">대화방</a>
-                            <a href="https://open.kakao.com/o/gg3qXoZf" target="_blank">신문고방</a>
+                            <a href="https://open.kakao.com/o/g1sCUT8d" target="_parent">공지방</a>
+                            <a href="https://open.kakao.com/o/gomQsvje" target="_parent">대화방</a>
+                            <a href="https://open.kakao.com/o/gg3qXoZf" target="_parent">신문고방</a>
                             <div class="link-click">클릭하시면 해당 링크가 열립니다.</div>
                         </div>
                     </div>
