const formData = new URLSearchParams()

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                     <input type="text" name="kakaoId" id="kakaoId" required />
                                 </label>
                                 <p class="button-container">
-                                    <button type="submit" class="btn" id="submit-button-2">확인</button>
+                                    <button type="button" class="btn" id="submit-button-2">확인</button>
                                 </p>
                             </div>
                         </div>
