--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </h1>
 
         <div class="view">
-            <form name="user-data" method="POST" data-netlify="true">
+            <form name="user-data" method="POST" data-netlify="true" action="/.netlify/functions/submit">
                 <div class="block" id="block1">
                     <div class="content">
                         <h3>Welcome !</h3>
